fix: hover broken on firefox 133
Previously, the sidebar would extend out from the side and underlap the main content.

With this change, the sidebar now overlaps the main page which is the intended behavior.

--- a/chrome/user-hover-sidebar.css
+++ b/chrome/user-hover-sidebar.css
@@ -18,7 +18,7 @@ from https://www.reddit.com/r/FirefoxCSS/comments/yx99mj/autohide_sidebar_css_st
   min-width: var(--sidebar-min) !important;
   max-width: var(--sidebar-min) !important;
   border-right: 1px solid var(--sidebar-border-color);
-  z-index: 1;
+  z-index: 3;
   transition: all var(--hover-speed);
   transition-delay: 0;
 }
